[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harbor-cli"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "pederhan", email = "pederhan@uio.no" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer",
  "harborapi @ git+https://github.com/pederhan/harborapi",
  "pydantic",
  "appdirs",
  "tomli",
  "tomli-w",
  "rich",
  "loguru",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/pederhan/harbor-cli#readme"
Issues = "https://github.com/pederhan/harbor-cli/issues"
Source = "https://github.com/pederhan/harbor-cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "harbor_cli/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "mypy", "black"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=harbortui --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["harbor_cli/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
ignore = [
  "E501", # line too long (we let black handle this)
  "F541", # f-string is missing placeholders
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = false
exclude = ["tests"]
